Fixed alignment on autocomplete-token-icon

--- a/theme-base/components/input/_autocomplete.scss
+++ b/theme-base/components/input/_autocomplete.scss
@@ -42,6 +42,7 @@
             border-radius: $borderRadius;
 
             .p-autocomplete-token-icon {
+                display: flex;
                 margin-left: $inlineSpacing;
             }
         }
